<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.company</groupId>
	<artifactId>template</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<description>springcloud模板</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
		<!-- Alibaba 与springboot、cloud版本适配：https://blog.csdn.net/a749227859/article/details/120195331 -->
		<!-- 
		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
		<spring-boot.version>2.0.3.RELEASE</spring-boot.version>
		 -->
		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
		<spring-boot.version>2.2.13.RELEASE</spring-boot.version><!-- 可用jrebel进行热部署的最高版本 -->
	</properties>

	<modules>
		<!-- 基础组件 -->
		<module>eureka</module>
		<module>zuul</module>
		<module>gateway</module>
		<module>config</module>
		<module>monitor</module>
		<!-- 公共代码 -->
		<module>common</module>
		<module>framework</module>
		<module>framework-edge</module>
		<!-- 内部微服务 -->
		<module>tool</module>
		<module>tool-api</module>
		<module>user</module>
		<module>user-api</module>
		<module>system</module>
		<module>system-api</module>
		<module>order</module>
		<module>order-api</module>
		<module>job</module>
		<!-- 聚合微服务 -->
		<module>web</module>
		<module>app</module>
		<module>openapi</module>
		<module>admin</module><!-- 管理后台，前后端一体，与adminapi二选一 -->
		<module>adminapi</module><!-- 管理后台，前后端分离，与admin二选一 -->
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-lang3</artifactId>
			    <version>3.10</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<!--编译插件-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<!--跳过测试-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<!--配置生成源码包-->
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-source-plugin</artifactId>
	            <executions>
	                <execution>
	                    <id>attach-sources</id>
	                    <goals>
	                        <goal>jar</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
        </plugins>
	</build>
</project>